application/backend-api/get-task-microservice/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-tasks
spec:
  replicas: 3
  selector:
    matchLabels:
      app: get-task
  template:
    metadata:
      labels:
        app: get-task
    spec:
      containers:
      - name: get-tasks
        image: todoregistry22.azurecr.io/gettask:v1
        ports:
        - containerPort: 8000
