application/backend-api/get-task-microservice/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: get-task
spec:
  type: ClusterIP
  selector:
    app: get-task
  ports:
    - port: 8000
      targetPort: 8000
